<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:orientation="vertical"
    tools:context="com.viralandroid.androidimageslidertutorial.AndroidImageSlider">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="About College"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPageAndroid"
        android:layout_width="wrap_content"
         android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
           
        android:layout_height="150dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        
        <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
            android:padding="10dp"
            android:baselineAligned="false">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:elevation="1dp"
            android:padding="5dp"
            android:text="@string/about_us"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#48a68b"
            android:background="#f5f5f5"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="5dp"
            android:text="@string/about_us_content1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#26a69a" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="5dp"
            android:text="@string/about_us_content2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>